--- a/CPSAP/Code/Lab_2/index.html
+++ b/CPSAP/Code/Lab_2/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Данные студента:</h1>
-    <h2>ФИО: </h2><p>Филипюк Илья Андреевич</p>
+    <h3>ФИО:</h3><p>Филипюк Илья Андреевич</р>
+    <h3>Курс: </h3><p>3</p>
+    <h3>Группа:</h3><p>6</p>
+    <h3>Факультет:</h3><p>ИТ</p>
     
 </body>
 </html>
