--- a/CPSAP/Code/Lab_3/index.html
+++ b/CPSAP/Code/Lab_3/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>03-01</title>
 </head>
+<script>
+</script>
 <body>
-    <h1>norm</h1>
+    <h1 id="state-display"></h1>
 </body>
 </html>
