--- a/CPSAP/Code/Lab_6/index.html
+++ b/CPSAP/Code/Lab_6/index.html
@@ -9,7 +9,7 @@
     <h1>Enter data to send mail</h1>
     <form method="post">
         <label for="from">From: </label>
-        <input type="email" name="from" id="from" required>
+        <input type="email" name="from" id="from" value="philmade6@gmail.com" disabled>
         <label for="to">To: </label>
         <input type="email" name="to" id="to" required>
         <label for="message">Message: </label>
