--- a/CPSAP/Code/Lab_7/static/index.html
+++ b/CPSAP/Code/Lab_7/static/index.html
@@ -27,7 +27,7 @@
   <section>
     <h2>Video</h2>
     <video controls width="480">
-      <source src="/sample.mp4" type="video/mp4">
+      <source src="/video.mp4" type="video/mp4">
      Your browser does not support video
     </video>
   </section>
