CPSAP:lab8 fixed. /upload POST endpoint request body print remains

--- a/CPSAP/Code/Lab_8/upload.html
+++ b/CPSAP/Code/Lab_8/upload.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <h1>upload file</h1>
-    <form method="POST" action="/upload" enctype="multipart/form-data">
+    <form method="POST" action="/upload" enctype="multipart/form-data"  id="form-upl">
         <input type="file" name="uploadFile" required/>
         <button type="submit">upload</button>
     </form>
 </body>
+
 </html>
