CPSAP:lab8 fix in progress. /upload POST endpoint raw bytes print fix needed

--- a/CPSAP/Code/Lab_8/upload.html
+++ b/CPSAP/Code/Lab_8/upload.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>upload file</h1>
-    <form method="POST" action="/upload" enctype="multipart/form-data"  id="form-upl">
+    <form method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="uploadFile" required/>
         <button type="submit">upload</button>
     </form>
