CPSAP:lab8 minor fix, lab9 started

--- a/CPSAP/Code/Lab_8/upload.html
+++ b/CPSAP/Code/Lab_8/upload.html
@@ -9,7 +9,7 @@
     <h1>upload file</h1>
     <form method="POST" action="/upload" enctype="multipart/form-data">
         <input type="file" name="uploadFile" required/>
-        <button type="submit">upload</button>
+        <input type="submit"></input>
     </form>
 </body>
 
