CPSAP:lab 8 minor fixes, lab10 ansers modified, lab9 text modified

--- a/CPSAP/Code/Lab_8/form-parameter.html
+++ b/CPSAP/Code/Lab_8/form-parameter.html
@@ -212,8 +212,8 @@
         </div>
 
         <div class="form-row submit-row">
-            <input class="btn primary" type="submit" id="submit1" value="Submit A" />
-            <input class="btn ghost" type="submit" id="submit2" value="Submit B" />
+            <input class="btn primary" type="submit" id="submit1" value="Submit A" name="SubmitButton"/>
+            <input class="btn ghost" type="submit" id="submit2" value="Submit B" name="SubmitButton"/>
         </div>
     </form>
 </body>
